--- a/assets/bootstrap/css/bootstrap-polish.css
+++ b/assets/bootstrap/css/bootstrap-polish.css
@@ -3076,7 +3076,7 @@ fieldset[disabled] a.btn {
   pointer-events: none;
 }
 .btn-default {
-  color: #333;
+  color: #3d9ae8;
   background-color: #fff;
   border-color: #ccc;
 }
@@ -4512,26 +4512,26 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
+  background-color: #FFFFFF;
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
-  color: #777;
+  color: #3d9ae8;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #5e5e5e;
+  color: #3d9ae8;
   background-color: transparent;
 }
 .navbar-default .navbar-text {
-  color: #777;
+  color: #3d9ae8;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #777;
+  color: #3d9ae8;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333;
+  color: #3d9ae8;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -4596,11 +4596,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #333;
 }
 .navbar-default .btn-link {
-  color: #777;
+  color: #3d9ae8;
 }
 .navbar-default .btn-link:hover,
 .navbar-default .btn-link:focus {
-  color: #333;
+  color: #3d9ae8;
 }
 .navbar-default .btn-link[disabled]:hover,
 fieldset[disabled] .navbar-default .btn-link:hover,
